<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.stochhome.MainActivity">

    <item
        android:id="@+id/Main_Menu"
        android:orderInCategory="100"
        android:title="Main_Menu"
        app:showAsAction="always"
        android:icon="@drawable/ic_vert" >

        <menu>

            <item
                android:id="@+id/action_saveastemplate"
                android:icon="@drawable/ic_save"
                android:orderInCategory="100"
                android:title="@string/action_savetemplate"
                app:showAsAction="never" />
            <item
                android:id="@+id/action_addtemplate"
                android:icon="@drawable/ic_copy"
                android:orderInCategory="100"
                android:title="@string/action_addtemplate"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_delete"
                android:icon="@drawable/ic_delete"
                android:orderInCategory="100"
                android:title="@string/action_delete"
                app:showAsAction="never" />


            <item
                android:id="@+id/action_share"
                android:icon="@drawable/ic_share"
                android:orderInCategory="100"
                android:title="@string/action_share"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_exit"
                android:orderInCategory="100"
                android:title="@string/action_exit"
                android:icon="@drawable/ic_exit"
                app:showAsAction="never" />
        </menu>

    </item>



</menu>
